; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_wl_window.c_relativePointerHandleRelativeMotion.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_wl_window.c_relativePointerHandleRelativeMotion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zwp_relative_pointer_v1 = type { i32 }
%struct.TYPE_3__ = type { double, double, i64, i64 }

@GLFW_CURSOR_DISABLED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.zwp_relative_pointer_v1*, i32, i32, i32, i32, i32, i32)* @relativePointerHandleRelativeMotion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @relativePointerHandleRelativeMotion(i8* %0, %struct.zwp_relative_pointer_v1* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca %struct.zwp_relative_pointer_v1*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_3__*, align 8
  %18 = alloca double, align 8
  %19 = alloca double, align 8
  store i8* %0, i8** %9, align 8
  store %struct.zwp_relative_pointer_v1* %1, %struct.zwp_relative_pointer_v1** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %20 = load i8*, i8** %9, align 8
  %21 = bitcast i8* %20 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %17, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load double, double* %23, align 8
  store double %24, double* %18, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load double, double* %26, align 8
  store double %27, double* %19, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @GLFW_CURSOR_DISABLED, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %8
  br label %66

34:                                               ; preds = %8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 3
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %50

39:                                               ; preds = %34
  %40 = load i32, i32* %15, align 4
  %41 = call i64 @wl_fixed_to_double(i32 %40)
  %42 = sitofp i64 %41 to double
  %43 = load double, double* %18, align 8
  %44 = fadd double %43, %42
  store double %44, double* %18, align 8
  %45 = load i32, i32* %16, align 4
  %46 = call i64 @wl_fixed_to_double(i32 %45)
  %47 = sitofp i64 %46 to double
  %48 = load double, double* %19, align 8
  %49 = fadd double %48, %47
  store double %49, double* %19, align 8
  br label %61

50:                                               ; preds = %34
  %51 = load i32, i32* %13, align 4
  %52 = call i64 @wl_fixed_to_double(i32 %51)
  %53 = sitofp i64 %52 to double
  %54 = load double, double* %18, align 8
  %55 = fadd double %54, %53
  store double %55, double* %18, align 8
  %56 = load i32, i32* %14, align 4
  %57 = call i64 @wl_fixed_to_double(i32 %56)
  %58 = sitofp i64 %57 to double
  %59 = load double, double* %19, align 8
  %60 = fadd double %59, %58
  store double %60, double* %19, align 8
  br label %61

61:                                               ; preds = %50, %39
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %63 = load double, double* %18, align 8
  %64 = load double, double* %19, align 8
  %65 = call i32 @_glfwInputCursorPos(%struct.TYPE_3__* %62, double %63, double %64)
  br label %66

66:                                               ; preds = %61, %33
  ret void
}

declare dso_local i64 @wl_fixed_to_double(i32) #1

declare dso_local i32 @_glfwInputCursorPos(%struct.TYPE_3__*, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
